--- a/src/app/bear-event/bear-event.html
+++ b/src/app/bear-event/bear-event.html
@@ -35,9 +35,8 @@
 
       <div class="form-field">
         <label for="damageRatio">Damage vs. Average</label>
-        <input id="damageRatio" type="number" step="0.1" [(ngModel)]="damageRatio" name="damageRatio" placeholder="e.g., 1.2" />
-        <p class="tooltip">Your damage versus an average rally (4 = 400% more).</p>
-      </div>
+        <input id="damageRatio" type="number" step="0.1" [(ngModel)]="damageRatio" name="damageRatio" placeholder="e.g., 4.0" />
+        <p class="tooltip">Your rally damage versus an average rally. Most users should keep this number as 1. Change this only if your rally is doing a lot more damage compared to others (e.g. x5 more), then change this to e.g. 5.</p>      </div>
 
       <div class="form-field-checkbox">
         <input id="hasAmadeus" type="checkbox" [(ngModel)]="hasAmadeus" name="hasAmadeus" />
