Final touches, remove not existing pages.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -23,8 +23,7 @@
     <a routerLink="/events/bear" (click)="toggleSideNav()">Bear Hunt</a>
     <div class="nav-category">Tools</div>
     <a routerLink="/tools/bear-optimizer" (click)="toggleSideNav()">Bear Optimizer</a>
-    <a routerLink="/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
-    <a routerLink="/guides" (click)="toggleSideNav()">Community Guides</a>
+    <a routerLink="/tools/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
   </nav>
 </aside>
 
