Improve favicons and add to home screen experience.

--- a/src/app/bear-event/bear-event.html
+++ b/src/app/bear-event/bear-event.html
@@ -33,7 +33,7 @@
           <div class="form-field">
             <label for="numMarches">Available Marches</label>
             <input id="numMarches" type="number" [(ngModel)]="numMarches" name="numMarches" placeholder="e.g., 5" />
-            <p class="tooltip">How many marches can you send at once?</p>
+            <p class="tooltip">How many join marches can you send at once?</p>
           </div>
 
           <div class="form-field">
