--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,9 @@
         <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
       </svg>
     </button>
-    <h1 class="app-title">Kingshot Companion</h1>
+    <a routerLink="/home" class="app-title-link">
+      <h1 class="app-title">Kingshot Companion</h1>
+    </a>
     <div class="header-actions">
       <app-user-profile />
     </div>
