--- a/src/app/rules/rules.css
+++ b/src/app/rules/rules.css
@@ -2,7 +2,6 @@
 
 :host {
   display: block;
-  margin-top: 6rem; /* Added margin to prevent tooltip cutoff */
   margin-bottom: 2rem;
 }
 
@@ -48,6 +47,7 @@
 .rules-list {
   list-style: none;
   padding: 0;
+  padding-top: 1.5rem;
   margin: 0;
   display: flex;
   flex-direction: column;
