--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
       <h1 class="app-title">Kingshot Companion</h1>
     </a>
     <div class="header-actions">
-      <button (click)="testSolver()">Test Solver</button> 
+      <!-- <button (click)="testSolver()">Test Solver</button>  -->
       <app-user-profile />
     </div>
   </div>
