Add swordland page.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,6 +24,7 @@
     <a routerLink="/home" (click)="toggleSideNav()">Home</a>
     <div class="nav-category">Events</div>
     <a routerLink="/events/bear" (click)="toggleSideNav()">Bear Hunt</a>
+    <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
     <div class="nav-category">Tools</div>
     <a routerLink="/tools/bear-optimizer" (click)="toggleSideNav()">Bear Optimizer</a>
     <a routerLink="/tools/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
