Add mystic trial event page.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,6 +25,7 @@
     <div class="nav-category">Events</div>
     <a routerLink="/events/bear" (click)="toggleSideNav()">Bear Hunt</a>
     <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
+    <a routerLink="/mystic-trial" (click)="toggleSideNav()">Mystic Trial</a>
     <div class="nav-category">Tools</div>
     <a routerLink="/tools/bear-optimizer" (click)="toggleSideNav()">Bear Optimizer</a>
     <a routerLink="/tools/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
