--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -8,11 +8,10 @@
 
   <main class="featured-content">
     <div class="card-grid">
-      <!-- Event Tracker Card -->
+      <!-- Bear Event Card -->
       <div class="card">
         <div class="card-content">
           <div class="card-icon">
-            <!-- SVG for Calendar/Events -->
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="48" height="48">
               <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0h18M12 14.25h.008v.008H12v-.008Z" />
             </svg>
@@ -29,7 +28,6 @@
       <div class="card">
         <div class="card-content">
           <div class="card-icon">
-            <!-- SVG for Gear/Settings -->
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="48" height="48">
               <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m18 0h-1.5m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m18 0h-1.5m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m18 0h-1.5M12 9.75v1.5m0 3v1.5m0-4.5v3m0-3h-1.5m3 0h-1.5m-1.5 3h1.5m-1.5 0h-1.5" />
             </svg>
@@ -39,6 +37,38 @@
         </div>
         <div class="card-footer">
           <a routerLink="/tools/hero-gear" class="card-link">Launch Tool</a>
+        </div>
+      </div>
+
+      <!-- Swordland Event Card -->
+      <div class="card">
+        <div class="card-content">
+          <div class="card-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="48" height="48">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+            </svg>
+          </div>
+          <h2 class="card-title">Swordland Event</h2>
+          <p class="card-description">A guide to mastering the Swordland event.</p>
+        </div>
+        <div class="card-footer">
+          <a routerLink="/swordland" class="card-link">View Guide</a>
+        </div>
+      </div>
+
+      <!-- Mystic Trial Event Card -->
+      <div class="card">
+        <div class="card-content">
+          <div class="card-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="48" height="48">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+            </svg>
+          </div>
+          <h2 class="card-title">Mystic Trial</h2>
+          <p class="card-description">Master the Mystic Trial event with this guide.</p>
+        </div>
+        <div class="card-footer">
+          <a routerLink="/mystic-trial" class="card-link">View Guide</a>
         </div>
       </div>
     </div>
